--- a/index.html
+++ b/index.html
@@ -5,16 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox Business</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
-    <header class="debug1">
+    <header class="py-1 px-1">
+
+        <div class="h-container d-flex">
+
+            <div class="h-links1 d-flex">
+                <div class="dropbox-logo">
+                    <img src="./img/logo-small.png" alt="dropbox logo">
+                </div>
+                <div>
+                    <a href="#">Perché Dropbox</a>
+                    <a href="#">Funzioni</a>
+                    <a href="#">Piani e Prezzi</a>
+                </div>
+
+            </div>
+
+            <div class="h-links2 d-flex">
+                <div>
+                    <a href="#">Supporto</a>
+                    <a href="#">Contatta l'ufficio vendite</a>
+                    <a href="#">Accedi</a>
+                </div>
+                <button>
+                    Inizia
+                </button>
+
+            </div>
+
+        </div>
 
     </header>
     <!-- /Header -->
 
-    <main  class="debug2">
+    <main>
+
+        <div class="heroimg-container">
+
+        </div>
+        <!-- /Hero Image -->
 
     </main>
     <!-- /Main -->
