hero image prima versione
prima bozza della sezione hero image

--- a/index.html
+++ b/index.html
@@ -48,9 +48,34 @@
 
     <main>
 
-        <div class="heroimg-container">
+        <section class="heroimg-container">
 
-        </div>
+            <div class="container d-flex heroimg-container2">
+                <div class="heroimg-title">
+                    <h1>
+                        Tutto ciò che ti serve per il lavoro, in un unico posto
+                    </h1>
+                </div>
+                <div class="heroimg-par">
+                    <div>
+                        Finalmente tutti i tuoi strumenti, contenuti, e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                    </div>
+                    <button>
+                        Inizia la tua prova gratuita
+                    </button>
+                    <div>
+                        Annulla in qualsiasi momento
+                    </div>
+                    <div>
+                        freccia
+                    </div>
+                </div>
+                <div class="heroimg-img">
+                    <img src="./img/jumbo.png" alt="hero image">
+                </div>
+            </div>
+
+        </section>
         <!-- /Hero Image -->
 
     </main>
