--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox Business</title>
 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <!-- /Google Fonts -->
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- /Fontawesome -->
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -50,7 +55,7 @@
 
         <section class="heroimg-container">
 
-            <div class="container d-flex heroimg-container2">
+            <div class="heroimg-container2 container d-flex">
                 <div class="heroimg-title">
                     <h1>
                         Tutto ciò che ti serve per il lavoro, in un unico posto
@@ -58,16 +63,16 @@
                 </div>
                 <div class="heroimg-par">
                     <div>
-                        Finalmente tutti i tuoi strumenti, contenuti, e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                     </div>
-                    <button>
+                    <button class="free-btn">
                         Inizia la tua prova gratuita
                     </button>
-                    <div>
+                    <div class="cancel">
                         Annulla in qualsiasi momento
                     </div>
-                    <div>
-                        freccia
+                    <div class="arrow">
+                        <i class="fa-solid fa-arrow-down"></i>
                     </div>
                 </div>
                 <div class="heroimg-img">
@@ -77,6 +82,11 @@
 
         </section>
         <!-- /Hero Image -->
+
+        <section>
+
+        </section>
+        <!-- /Piano di business -->
 
     </main>
     <!-- /Main -->
