--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     Funzioni di produttività premium e condivisione file semplice e sicura
                                 </li>
                             </ul>
-                            <button>
+                            <button class="btn">
                                 Prova gratis per 30 giorni
                             </button>
                             <div>
@@ -185,7 +185,7 @@
                                     Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
                                 </li>
                             </ul>
-                            <button>
+                            <button class="btn">
                                 Prova gratis per 30 giorni
                             </button>
                             <div>
@@ -225,7 +225,7 @@
 
                     <div class="bsn-card">
                         <div class="bsn-card-title">
-                            <i class="fa-solid fa-user"></i>
+                            <i class="fa-solid fa-building"></i>
                             Azienda
                         </div>
                         <div class="bsn-card-body">
@@ -249,10 +249,10 @@
                                 </li>
                                 <li>
                                     <i class="fa-solid fa-share-nodes"></i>
-                                    Assistenza personalizzata per aiutare gli amministratori in una getione su larga scala
+                                    Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
                                 </li>
                             </ul>
-                            <button>
+                            <button class="btn">
                                 Contattaci
                             </button>
                             <div>
@@ -282,8 +282,33 @@
                     </div>
                     <!-- /Piano Enterprise -->
 
-                </div>
+                    <div class="bsn-card2">
+                        <div class="bsn-card-title">
+                            <i class="fa-solid fa-building"></i>
+                            Team
+                        </div>
+                        <div class="bsn-card-body2 d-flex">
+                            <div class="col1">
+                                <h2>
+                                    Enterprise
+                                </h2>
+                                <h3 class="ufficio-vendite">
+                                    Contatta l'ufficio vendite per i prezzi
+                                </h3>
+                                <div>
+                                    Soluzioni personalizzate e supporto su misura per auitare i professionisti IT nella gestione su qualsiasi scala.
+                                </div>
+                            </div>
+                            <div class="col2 d-flex">
+                                <button class="btn2">
+                                    Contattaci
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /Piano Enterprise larghezza 100% -->
 
+                </div>
 
             </div>
 
