--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
         <!-- /Hero Image -->
 
-        <section class="bsn">
+        <section>
 
             <div class="container2">
                 
@@ -92,12 +92,15 @@
                         Trova il piano di business che fa per te
                     </h1>
                 </div>
+                <!-- /Titolo sezione -->
+
                 <div class="radio-btn">
                     <input type="radio" id="mensile" name="fatturazione">
                     <label for="mensile">Fatturazione mensile</label>
                     <input type="radio" id="annuale" name="fatturazione">
                     <label for="annuale">Fatturazione annuale</label>
                 </div>
+                <!-- /Scelta fatturazione -->
 
                 <div class="card-container d-flex">
 
@@ -202,7 +205,7 @@
                                 </li>
                                 <li>
                                     <i class="fa-solid fa-check"></i>
-                                    cartelle offline su dispositivi mobili
+                                    Cartelle offline su dispositivi mobili
                                 </li>
                                 <li>
                                     <i class="fa-solid fa-check"></i>
@@ -301,7 +304,7 @@
                             </div>
                             <div class="col2 d-flex">
                                 <button class="btn2">
-                                    Contattaci
+                                    Contatta l'ufficio vendite
                                 </button>
                             </div>
                         </div>
@@ -312,9 +315,34 @@
 
             </div>
 
-
         </section>
         <!-- /Piano di business -->
+
+        <section>
+
+            <div class="container2 d-flex partner">
+
+                <div class="img">
+                    <img src="./img/partner.png" alt="business partner">
+                </div>
+
+                <div class="par">
+                    <h2>
+                        Entra in contatto con un partner Dropbox
+                    </h2>
+                    <div>
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui l'implementazione, integrazione, gestione e supporto continui.
+                    </div>
+                    <button>
+                        Trova un partner
+                    </button>
+
+                </div>
+
+            </div>
+
+        </section>
+        <!-- /Entra in contatto -->
 
     </main>
     <!-- /Main -->
