sezione operazioni di business
prima bozza

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             <div class="container2">
                 
                 <div class="bsn-title">
-                    <h1>
+                    <h2>
                         Trova il piano di business che fa per te
-                    </h1>
+                    </h2>
                 </div>
                 <!-- /Titolo sezione -->
 
@@ -342,7 +342,117 @@
             </div>
 
         </section>
-        <!-- /Entra in contatto -->
+        <!-- /Partner Dropbox -->
+
+        <section>
+
+            <div class="container2">
+
+                <div class="operaz-title">
+                    <h2>
+                        Esegui più operazioni con Dropbox Business
+                    </h2>
+                </div>
+                <!-- /Titolo sezione -->
+
+                <div class="operaz d-flex">
+                    <div class="flex-item">
+                        <div class="operaz-card-img">
+                            <img src="./img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="operaz-card-title">
+                            <h2>
+                                Passa di meno da uno strumento all'altro
+                            </h2>
+                        </div>
+                        <div>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </div>
+                    </div>
+                    <!-- /Card operazioni Business -->
+                    
+                    <div class="flex-item">
+                        <div class="operaz-card-img">
+                            <img src="./img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="operaz-card-title">
+                            <h2>
+                                Passa di meno da uno strumento all'altro
+                            </h2>
+                        </div>
+                        <div>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </div>
+                    </div>
+                    <!-- /Card operazioni Business -->
+
+                    <div class="flex-item">
+                        <div class="operaz-card-img">
+                            <img src="./img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="operaz-card-title">
+                            <h2>
+                                Passa di meno da uno strumento all'altro
+                            </h2>
+                        </div>
+                        <div>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </div>
+                    </div>
+                    <!-- /Card operazioni Business -->
+
+                    <div class="flex-item">
+                        <div class="operaz-card-img">
+                            <img src="./img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="operaz-card-title">
+                            <h2>
+                                Passa di meno da uno strumento all'altro
+                            </h2>
+                        </div>
+                        <div>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </div>
+                    </div>
+                    <!-- /Card operazioni Business -->
+
+                    <div class="flex-item">
+                        <div class="operaz-card-img">
+                            <img src="./img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="operaz-card-title">
+                            <h2>
+                                Passa di meno da uno strumento all'altro
+                            </h2>
+                        </div>
+                        <div>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </div>
+                    </div>
+                    <!-- /Card operazioni Business -->
+
+                    <div class="flex-item">
+                        <div class="operaz-card-img">
+                            <img src="./img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="operaz-card-title">
+                            <h2>
+                                Passa di meno da uno strumento all'altro
+                            </h2>
+                        </div>
+                        <div>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </div>
+                    </div>
+                    <!-- /Card operazioni Business -->
+
+
+                </div>
+
+            </div>
+
+        </section>
+        <!-- /Operazioni -->
 
     </main>
     <!-- /Main -->
