--- a/index.html
+++ b/index.html
@@ -454,6 +454,26 @@
         </section>
         <!-- /Operazioni -->
 
+        <section>
+
+            <div class="container2">
+
+                <div class="team-title">
+                    <h2>
+                        Più di 5000 team utilizzano Dropbox Business
+                    </h2>
+                </div>
+                <!-- /Titolo sezione -->
+
+                <div class="scopri">
+                    <a href="#">Scopri di più sui nostri clienti</a>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- /Team -->
+
     </main>
     <!-- /Main -->
 
