--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox Business</title>
 
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -15,6 +14,7 @@
     <!-- /Fontawesome -->
 
     <link rel="stylesheet" href="./css/style.css">
+    <!-- /Link al css -->
 </head>
 <body>
 
@@ -24,7 +24,9 @@
 
             <div class="h-links1 d-flex">
                 <div class="dropbox-logo">
-                    <img src="./img/logo-small.png" alt="dropbox logo">
+                    <a href="#">
+                        <img src="./img/logo-small.png" alt="dropbox logo">
+                    </a>
                 </div>
                 <div>
                     <a href="#">Perché Dropbox</a>
@@ -357,7 +359,7 @@
 
                 <div class="operaz d-flex">
 
-                    <div class="flex-item">
+                    <div class="operaz-item">
                         <div class="operaz-card-img">
                             <img src="./img/business-feature-switching-tools.png" alt="">
                         </div>
@@ -372,7 +374,7 @@
                     </div>
                     <!-- /Card operazioni Business -->
                     
-                    <div class="flex-item">
+                    <div class="operaz-item">
                         <div class="operaz-card-img">
                             <img src="./img/business-feature-send-files-it.png" alt="">
                         </div>
@@ -387,7 +389,7 @@
                     </div>
                     <!-- /Card operazioni Business -->
 
-                    <div class="flex-item">
+                    <div class="operaz-item">
                         <div class="operaz-card-img">
                             <img src="./img/business-feature-coordinate-it.png" alt="">
                         </div>
@@ -402,7 +404,7 @@
                     </div>
                     <!-- /Card operazioni Business -->
 
-                    <div class="flex-item">
+                    <div class="operaz-item">
                         <div class="operaz-card-img">
                             <img src="./img/business-feature-integrations-it.png" alt="">
                         </div>
@@ -417,7 +419,7 @@
                     </div>
                     <!-- /Card operazioni Business -->
 
-                    <div class="flex-item">
+                    <div class="operaz-item">
                         <div class="operaz-card-img">
                             <img src="./img/business-feature-multi-device.png" alt="">
                         </div>
@@ -432,7 +434,7 @@
                     </div>
                     <!-- /Card operazioni Business -->
 
-                    <div class="flex-item">
+                    <div class="operaz-item">
                         <div class="operaz-card-img">
                             <img src="./img/business-feature-security.png" alt="">
                         </div>
@@ -473,6 +475,41 @@
 
         </section>
         <!-- /Team -->
+
+        <section>
+
+            <div class="clients d-flex">
+
+                <div class="clients-item lateral d-flex">
+
+                    <div class="clients-card designit d-flex">
+                        <img src="./img/designit.svg" alt="designit">
+                    </div>
+                    <div class="clients-card arizona d-flex">
+                        <img src="./img/arizona_state_university.svg" alt="arizona state university">
+                    </div>
+                    <div class="clients-card florida d-flex">
+                        <img src="./img/university_of_florida.svg" alt="university of florida">
+                    </div>
+                    <div class="clients-card topps d-flex">
+                        <img src="./img/topps.svg" alt="topps">
+                    </div>
+
+                </div>
+
+                <div class="clients-item">
+
+                </div>
+
+                <div class="clients-item lateral d-flex">
+
+                </div>
+
+
+            </div>
+
+        </section>
+        <!-- /Icone clienti -->
 
     </main>
     <!-- /Main -->
