sezione clienti terminata

--- a/index.html
+++ b/index.html
@@ -483,25 +483,47 @@
                 <div class="clients-item lateral d-flex">
 
                     <div class="clients-card designit d-flex">
-                        <img src="./img/designit.svg" alt="designit">
+                        <img src="./img/designit.svg" alt="designit logo">
                     </div>
                     <div class="clients-card arizona d-flex">
-                        <img src="./img/arizona_state_university.svg" alt="arizona state university">
+                        <img src="./img/arizona_state_university.svg" alt="arizona university logo">
                     </div>
                     <div class="clients-card florida d-flex">
-                        <img src="./img/university_of_florida.svg" alt="university of florida">
+                        <img src="./img/university_of_florida.svg" alt="florida university logo">   
                     </div>
                     <div class="clients-card topps d-flex">
-                        <img src="./img/topps.svg" alt="topps">
+                        <img src="./img/topps.svg" alt="topps logo">
                     </div>
 
                 </div>
 
-                <div class="clients-item">
+                <div class="clients-item designit-quote">
+                    <div class="designit-logo">
+                        <img src="./img/designit.svg" alt="designit logo">
+                    </div>
+                    <div class="thomsen-quote">
+                        'I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.'
+                        <br>
+                        <br>
+                        Morten Thomsen, Global IT Lead 
+                    </div>
 
                 </div>
 
                 <div class="clients-item lateral d-flex">
+
+                    <div class="clients-card bicycle d-flex">
+                        <img src="./img/world_bicycle_relief.svg" alt="bicycle logo">
+                    </div>
+                    <div class="clients-card hearst d-flex">
+                        <img src="./img/hearst_corp.svg" alt="hearst logo">
+                    </div>
+                    <div class="clients-card lonely d-flex">
+                        <img src="./img/lonely_planet.svg" alt="lonely planet logo">   
+                    </div>
+                    <div class="clients-card clear d-flex">
+                        <img src="./img/clear_channel.svg" alt="clear channel logo">
+                    </div>
 
                 </div>
 
