sezione porta drop nella tua azienda e fix bottoni

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 
-    <header class="py-1 px-1">
+    <header>
 
-        <div class="h-container d-flex">
+        <div class="h-container d-flex px-1">
 
             <div class="h-links1 d-flex">
                 <div class="dropbox-logo">
@@ -28,24 +28,22 @@
                         <img src="./img/logo-small.png" alt="dropbox logo">
                     </a>
                 </div>
-                <div>
+                <div class="links">
                     <a href="#">Perché Dropbox</a>
                     <a href="#">Funzioni</a>
                     <a href="#">Piani e Prezzi</a>
                 </div>
-
             </div>
 
             <div class="h-links2 d-flex">
-                <div>
+                <div class="links">
                     <a href="#">Supporto</a>
                     <a href="#">Contatta l'ufficio vendite</a>
                     <a href="#">Accedi</a>
                 </div>
-                <button>
+                <a href="#" class="a-btn">
                     Inizia
-                </button>
-
+                </a>
             </div>
 
         </div>
@@ -67,9 +65,9 @@
                     <div>
                         Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                     </div>
-                    <button class="free-btn">
+                    <a href="" class="a-btn">
                         Inizia la tua prova gratuita
-                    </button>
+                    </a>
                     <div class="cancel">
                         Annulla in qualsiasi momento
                     </div>
@@ -135,9 +133,9 @@
                                     Funzioni di produttività premium e condivisione file semplice e sicura
                                 </li>
                             </ul>
-                            <button class="btn">
+                            <a href="#" class="a-btn">
                                 Prova gratis per 30 giorni
-                            </button>
+                            </a>
                             <div>
                                 oppure <a href="#">acquista ora</a>
                             </div>
@@ -190,9 +188,9 @@
                                     Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
                                 </li>
                             </ul>
-                            <button class="btn">
+                            <a href="#" class="a-btn">
                                 Prova gratis per 30 giorni
-                            </button>
+                            </a>
                             <div>
                                 oppure <a href="#">acquista ora</a>
                             </div>
@@ -257,9 +255,9 @@
                                     Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
                                 </li>
                             </ul>
-                            <button class="btn">
+                            <a href="#" class="a-btn">
                                 Contattaci
-                            </button>
+                            </a>
                             <div>
                                 oppure <a href="#">acquista ora</a>
                             </div>
@@ -305,9 +303,9 @@
                                 </div>
                             </div>
                             <div class="col2 d-flex">
-                                <button class="btn2">
+                                <a href="#" class="a-btn">
                                     Contatta l'ufficio vendite
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -322,7 +320,7 @@
 
         <section>
 
-            <div class="container2 d-flex partner">
+            <div class="partner container2 d-flex">
 
                 <div class="img">
                     <img src="./img/partner.png" alt="business partner">
@@ -335,10 +333,9 @@
                     <div>
                         Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui l'implementazione, integrazione, gestione e supporto continui.
                     </div>
-                    <button>
+                    <a href="#" class="a-btn">
                         Trova un partner
-                    </button>
-
+                    </a>
                 </div>
 
             </div>
@@ -527,11 +524,27 @@
 
                 </div>
 
-
             </div>
 
         </section>
         <!-- /Icone clienti -->
+
+        <section class="porta-dropbox">
+
+            <div class="container2 porta-dropbox-cont d-flex">
+
+                <div class="title">
+                    <h2>Porta Dropbox Business nella tua azienda</h2>
+                </div>
+
+                <div class="">
+                    <a href="#" class="a-btn">Inizia la tua prova gratuita</a>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- /Porta Dropbox -->
 
     </main>
     <!-- /Main -->
