--- a/index.html
+++ b/index.html
@@ -546,6 +546,65 @@
         </section>
         <!-- /Porta Dropbox -->
 
+        <section>
+
+            <div class="faq container2">
+
+                <div class="faq-title">
+                    <h2>Domande frequenti</h2>
+                </div>
+                <div class="faq-container">
+                    <div class="question d-flex">
+                        <div>
+                            <h4>
+                                Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                            </h4>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <p class="answer">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aliquam ex harum in, fuga enim doloribus, magni facere magnam quos suscipit repudiandae corporis dolorem vitae, recusandae similique laborum laudantium iusto.
+                    </p>
+                </div>
+                <div class="faq-container">
+                    <div class="question d-flex">
+                        <div>
+                            <h4>
+                                Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                            </h4>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <p class="answer">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aliquam ex harum in, fuga enim doloribus, magni facere magnam quos suscipit repudiandae corporis dolorem vitae, recusandae similique laborum laudantium iusto.
+                    </p>
+                </div>
+                <div class="faq-container">
+                    <div class="question d-flex">
+                        <div>
+                            <h4>
+                                Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                            </h4>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <p class="answer">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aliquam ex harum in, fuga enim doloribus, magni facere magnam quos suscipit repudiandae corporis dolorem vitae, recusandae similique laborum laudantium iusto.
+                    </p>
+                </div>
+
+            </div>
+
+
+        </section>
+        <!-- /Domande frequenti -->
+
     </main>
     <!-- /Main -->
 
