prima versione completa
completato layout, finite quasi tutte le animazioni

--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-up"></i>
                         </div>
                     </div>
                     <p class="answer">
@@ -577,6 +578,7 @@
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-up"></i>
                         </div>
                     </div>
                     <p class="answer">
@@ -592,6 +594,7 @@
                         </div>
                         <div>
                             <i class="fa-solid fa-chevron-down"></i>
+                            <i class="fa-solid fa-chevron-up"></i>
                         </div>
                     </div>
                     <p class="answer">
@@ -608,7 +611,132 @@
     </main>
     <!-- /Main -->
 
-    <footer  class="debug3">
+    <footer>
+
+        <div class="f-container container d-flex">
+
+            <div class="f-item">
+                <h3>
+                    Dropbox
+                </h3>
+                <ul>
+                    <li>
+                        <a href="">Applicazione Desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="f-item">
+                <h3>
+                    Prodotti
+                </h3>
+                <ul>
+                    <li>
+                        <a href="">Applicazione Desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="f-item">
+                <h3>
+                    Azienda
+                </h3>
+                <ul>
+                    <li>
+                        <a href="">Applicazione Desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="f-item">
+                <h3>
+                    Supporto
+                </h3>
+                <ul>
+                    <li>
+                        <a href="">Applicazione Desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="f-item">
+                <h3>
+                    Community
+                </h3>
+                <ul>
+                    <li>
+                        <a href="">Applicazione Desktop</a>
+                    </li>
+                    <li>
+                        <a href="">Perché Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="">Piani</a>
+                    </li>
+                    <li>
+                        <a href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="">Funzioni</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="language">
+                <hr>
+                <div>
+                    <i class="fa-solid fa-earth-europe"></i>
+                    Italiano
+                    <i class="fa-solid fa-caret-up"></i>
+                </div>
+            </div>
+
+        </div>
+        
 
     </footer>
     <!-- /Footer -->
