--- a/index.html
+++ b/index.html
@@ -538,8 +538,7 @@
                 <div class="title">
                     <h2>Porta Dropbox Business nella tua azienda</h2>
                 </div>
-
-                <div class="">
+                <div>
                     <a href="#" class="a-btn">Inizia la tua prova gratuita</a>
                 </div>
 
@@ -605,7 +604,6 @@
                 </div>
 
             </div>
-
 
         </section>
         <!-- /FAQ -->
